--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,52 @@ jobs:
           name: Build Docker Compose Images
           command: npm run test:ci:build
   test:
-    parallelism: 2
+    machine:
+      image: circleci/classic:latest
+      docker_layer_caching: true
     working_directory: ~/bitcore
+    parallelism: 4
     steps:
       - checkout
       - run:
-          name: Unit Tests
-          command: npm run test:ci:unit:all
+          name: Build Docker Compose Images
+          command: npm run test:ci:build
+      - run:
+          name: Bitcore-Wallet-Service Tests
+          command: npm run ci:bitcore-wallet-service
+      - run:
+          name: Bitcore-Wallet-Client Tests
+          command: npm run ci:bitcore-wallet-client
+      - run:
+          name: Bitcore-Node Tests
+          command: npm run ci:bitcore-node
+      - run:
+          name: Bitcore-Lib Tests
+          command: npm run ci:bitcore-lib
+      - run:
+          name: Bitcore-Lib-Cash Tests
+          command: npm run ci:bitcore-lib-cash
+      - run:
+          name: Bitcore-P2P Tests
+          command: npm run ci:bitcore-p2p
+      - run:
+          name: Bitcore-P2P-Cash Tests
+          command: npm run ci:bitcore-p2p-cash
+      - run:
+          name: Bitcore-Payment-Protocol Tests
+          command: npm run ci:bitcore-payment-protocol
+      - run:
+          name: Bitcore-Mnemonic Tests
+          command: npm run ci:bitcore-mnemonic
       - run:
           name: Integration Tests
           command: npm run test:ci:integration
+
+workflows:
+  version: 2
+  build-test-and-deploy:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
