--- a/packages/bitcore-wallet-client/package.json
+++ b/packages/bitcore-wallet-client/package.json
@@ -29,8 +29,6 @@
     "async": "^0.9.0",
     "awesome-typescript-loader": "^5.2.1",
     "bip38": "^1.3.0",
-    "bitcore-lib": "^8.8.0",
-    "bitcore-lib-cash": "^8.8.0",
     "bitcore-mnemonic": "^8.8.0",
     "crypto-wallet-core": "^8.8.0",
     "json-stable-stringify": "^1.0.1",
@@ -50,7 +48,6 @@
     "istanbul": "*",
     "mocha": "^5.2.0",
     "mongodb": "^2.0.27",
-    "rimraf": "^2.6.3",
     "sinon": "^7.1.1",
     "supertest": "*",
     "ts-node": "^8.0.3",
@@ -62,14 +59,14 @@
   "scripts": {
     "start": "npm run clean && npm run tsc && node app.js",
     "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --reporter spec test",
-    "test": "npm run compile && ./node_modules/.bin/mocha --exit",
+    "test": "npm run compile && mocha --exit",
     "test:ci": "npm run test",
     "docs": "./node_modules/.bin/jsdox lib/* lib/common lib/errors -o docs && cat README.header.md  docs/*.md LICENSE > README.md",
     "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "compile": "npm run tsc",
     "tsc": "npm run clean && tsc",
     "build": "tsc && npm run lint",
-    "clean": "rimraf ./ts_build",
+    "clean": "rm -rf ./ts_build",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "lint-fix": "tslint --fix -c tslint.json 'src/**/*.ts'",
     "pub": "npm run build && npm publish"
