--- a/packages/crypto-wallet-core/package.json
+++ b/packages/crypto-wallet-core/package.json
@@ -9,7 +9,7 @@
     "clean": "rm -rf ts_build",
     "compile": "npm run clean && npm run build",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "test": "npm run compile && mocha ts_build/test/*.js",
+    "test": "npm run compile && mocha -r ts-node/register test/*.ts",
     "pub": "npm run compile && npm publish"
   },
   "keywords": [
