--- a/packages/bitcore-wallet-service/package.json
+++ b/packages/bitcore-wallet-service/package.json
@@ -50,6 +50,7 @@
     "sjcl": "^1.0.2",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
+    "source-map-support": "^0.5.13",
     "sticky-session": "^0.1.0",
     "uuid": "^3.3.2"
   },
