--- a/packages/bitcore-wallet-service/package.json
+++ b/packages/bitcore-wallet-service/package.json
@@ -83,13 +83,13 @@
     "start": "npm run clean && npm run tsc && ./start.sh",
     "stop": "./stop.sh",
     "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --reporter spec test",
-    "test": "./node_modules/.bin/mocha --exit",
+    "test": "npm run compile && mocha",
     "test:ci": "npm run test",
     "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "compile": "npm run tsc",
     "tsc": "npm run clean && tsc",
     "build": "tsc && npm run lint",
     "clean": "rm -rf ./ts_build",
+    "compile": "npm run clean && npm run build",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "lint-fix": "tslint --fix -c tslint.json 'src/**/*.ts'",
     "pub": "npm run build && npm publish"
