--- a/packages/insight/package.json
+++ b/packages/insight/package.json
@@ -49,6 +49,7 @@
     "angular2-moment": "1.7.1",
     "angular2-qrcode": "2.0.1",
     "bs58": "^4.0.1",
+    "chart.js": "^2.8.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "lodash": "4.17.11",
