--- a/packages/crypto-wallet-core/package.json
+++ b/packages/crypto-wallet-core/package.json
@@ -21,9 +21,13 @@
   "author": "Micah Riggan",
   "license": "MIT",
   "dependencies": {
+    "base-x": "^3.0.7",
     "bitcore-lib": "^8.9.0",
     "bitcore-lib-cash": "^8.9.0",
     "ethers": "4.0.37",
+    "ripple-keypairs": "0.11.0",
+    "ripple-lib": "1.3.3",
+    "bignumber.js": "9.0.0",
     "web3": "1.2.1"
   },
   "devDependencies": {
