--- a/packages/crypto-wallet-core/package.json
+++ b/packages/crypto-wallet-core/package.json
@@ -27,7 +27,7 @@
     "ripple-keypairs": "0.11.0",
     "ripple-lib": "1.3.3",
     "ripple-binary-codec": "^0.2.4",
-    "web3": "1.2.1",
+    "web3": "1.2.1"
   },
   "devDependencies": {
     "@types/chai": "4.1.7",
