--- a/packages/bitcore-client/package.json
+++ b/packages/bitcore-client/package.json
@@ -34,6 +34,7 @@
     "leveldown": "3.0.0",
     "levelup": "2.0.2",
     "mkdirp": "0.5.1",
+    "mongodb": "3.1.10",
     "progress": "2.0.0",
     "promptly": "3.0.3",
     "request": "2.87.0",
